# llm-evaluation-framework

./:  pytest.ini  .coveragerc  .gitignore  README.md  fix_storage_path.py  index.html  project_structure.txt  template.md  test_claude_connection.py  test_evaluation.py  test_openai_connection.py  test_openai_evaluation.py
QR_FILES/: datasets.txt  prompts.txt  (+3 more)
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250306_222530_initial_schema.py  20250406_140354_initial_migration.py  20250407_172918_renamed_dataset_filed_schema_to_fix_.py  20250415_115426_added_reports_models.py  20250506_185618_initial_migration.py  20250506_190733_add_user_relationships.py  20250511_083801_updated_agents_model_added_integration_.py  20250512_131547_added_pass_fail_in_evaluations.py  20250513_094620_added_processed_items_in_evaluation.py  20250518_090542_removed_comparison_old_table.py  20250518_092734_added_updated_comparison_table.py  20250519_180017_added_narrative_insights_metric_configs_.py  20250616_120147_added_impersonate_fields_to_evaluation.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/dependencies/: auth.py  rate_limiter.py
backend/app/api/middleware/: error_handler.py  jwt_validator.py
backend/app/api/v1/: agents.py  auth.py  comparisons.py  datasets.py  evaluations.py  prompts.py  reports.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: session.py
backend/app/db/models/: base.py  orm.py
backend/app/db/repositories/: agent_repository.py  base.py  comparison_repository.py  dataset_repository.py  evaluation_repository.py  prompt_repository.py  report_repository.py  user_repository.py
backend/app/db/schema/: agent_schema.py  comparison_schema.py  dataset_schema.py  deepeval_schema.py  evaluation_schema.py  microagent_schema.py  prompt_schema.py  report_schema.py  response_schema.py  user_schema.py
backend/app/db/validators/: dataset_validator.py
backend/app/evaluation/: factory.py
backend/app/evaluation/adapters/: dataset_adapter.py  deepeval_agent_adapter.py  prompt_adapter.py
backend/app/evaluation/engines/: base.py
backend/app/services/: agent_service.py  auth.py  comparison_service.py  dataset_service.py  evaluation_service.py  impersonation_service.py  microagent_service.py  prompt_service.py  report_service.py  storage.py
backend/app/utils/: credential_utils.py  deepeval_sample.py  response_utils.py  sample_dataset.py  sample_evaluation_runner.py  validation.py
backend/app/workers/: tasks.py
backend/scripts/: create_migration.py  ragas_evaluation.py  test_ragas_evaluation.py
backend/tests/: conftest.py  pytest.ini  test_evaluation_api.py  test_ragas_implementation.py  utils.py
backend/tests/api/: test_prompts.py
backend/tests/evaluation/: test_ragas_evaluation.py
backend/tests/integration/: test_dataset_workflow.py  test_deepeval_integration.py  test_mcp_client.py  test_prompt_workflow.py  test_ragas_implementation.py
backend/tests/templates/: test_endpoint_template.py
(+530 files in other folders)
