[project]
name = "Microservice_Pixi_LLM_Evalutation"
version = "0.1.0"
description = "An Evaluation framework for Pixi - The AI Assistant"
authors = [
    {name = "aljoseph@man.qatarairways.com.qa"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "authlib (>=1.5.1,<2.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "asgi-lifespan (>=2.1.0,<3.0.0)",
    "pytest-sugar (>=1.0.0,<2.0.0)",
    "celery (>=5.5.0,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ragas (>=0.2.14,<0.3.0)",
    "mcp (>=1.8.0,<2.0.0)",
    "deepeval (>=2.9.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false
